# F1-PITNN

./: .gitignore  LICENSE  README.md  advanced_simulation_plan.md  deep-research-report.md  maximum_realism_implementation_plan.md  pitnn_tire_temp_spec_and_plan.md  pyproject.toml  simulation_model.md
configs/: base.yaml  baseline_lstm.yaml  baseline_transformer.yaml  pinn_lstm.yaml  pinn_transformer.yaml
native/hf_diffusion/: CMakeLists.txt  diffusion.cpp
native/hf_simulator_kernels/: CMakeLists.txt  simulator_kernels.cpp
scripts/: benchmark_diffusion_kernel.py  benchmark_high_fidelity.py  benchmark_simulator_kernels.py  build_hf_diffusion_native.py  build_hf_simulator_native.py  plot_realism_v3_diagnostics.py  profile_high_fidelity_runtime.py  report_high_fidelity_no_data.py  run_high_fidelity_no_data.py  run_realism_stepwise.py  run_realism_v3_stepwise.py
src/: __init__.py
src/data/: align.py  fastf1_loader.py  features.py  splits.py  weather_loader.py
src/models/: __init__.py  losses.py  lstm.py  physics.py  transformer.py  vehicle_thermal.py
src/models/high_fidelity/: __init__.py  adapters.py  boundary_conditions.py  materials.py  native_diffusion.py  native_simulator_kernels.py  reporting.py  simulator.py  thermal_solver.py  types.py  uq.py  vehicle_simulator.py  wheel_coupling.py
src/pitnn/: __init__.py  config.py  reproducibility.py
src/train/: evaluate.py  sweep.py  train.py
src/utils/: metrics.py
tests/: test_hf_boundaries.py  test_hf_diffusion_kernel.py  test_hf_end_to_end.py  test_hf_materials.py  test_hf_realism_upgrades.py  test_hf_simulator_kernels.py  test_hf_thermal_solver.py  test_hf_uq.py  test_hf_vehicle.py  test_hf_wheel_coupling.py  test_high_fidelity_skeleton.py  test_phase0.py  test_physics_simulation.py  test_vehicle_thermal.py
tests/fixtures/: hf_diffusion_reference.npz
